<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.algonquinlive.cst335.finalgroupproject.StartActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/title"
        android:textSize="20sp"
        android:textStyle="bold" />

    <GridLayout
        android:id="@+id/opening_grid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:columnCount="2"
        android:rowCount="2">

        <Button
            android:id="@+id/student_button01"
            android:layout_column="0"
            android:layout_marginBottom="20dp"
            android:layout_marginEnd="20dp"
            android:layout_row="0"
            android:height="80dp"
            android:text="@string/student_01_name" />

        <Button
            android:id="@+id/student_button02"
            android:layout_column="1"
            android:layout_marginStart="20dp"
            android:layout_row="0"
            android:height="80dp"
            android:text="@string/student_02_name" />

        <Button
            android:id="@+id/student_button03"
            android:layout_column="0"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            android:layout_row="1"
            android:height="80dp"
            android:text="@string/student_03_name" />

        <Button
            android:id="@+id/student_button04"
            android:layout_column="1"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_row="1"
            android:height="80dp"
            android:text="@string/student_04_name" />
    </GridLayout>


</RelativeLayout>
